Removed WRDS credentials

--- a/Stock Comparables Project.ipynb
+++ b/Stock Comparables Project.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "# Establish connection to WRDS\n",
     "\n",
-    "db = wrds.Connection(wrds_username='bgreen41')"
+    "db = wrds.Connection()"
    ]
   },
   {
